# py-junitdiff

./: LICENSE  README.md  pyproject.toml
samples/: junit1.xml  junit2.xml  junit_usr_tests_sys_kern.xml
src/junitdiff/: __main__.py
