[project]
name = "py-junitdiff"
version = "0.0.1"
description = "Simple JUnit XML test case report summary tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-2-Clause"}
keywords = ["network"]
authors = [
    {name = "Enji Cooper", email = "yaneurabeya@gmail.com"}
]
maintainers = [
    {name = "Enji Cooper", email = "yaneurabeya@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: BSD 2-Clause",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "junitparser~=3.1.0"
]

[project.scripts]
junitdiff = "junitdiff.__main__:main"

[project.urls]
"Homepage" = "https://github.com/ngie-eign/py-junitdiff"
"Bug Reports" = "https://github.com/ngie-eign/py-junitdiff/issues"
"Source" = "https://github.com/ngie-eign/py-junitdiff"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
strict_optional = true
warn_return_any = true
warn_unused_ignores = false

[tool.setuptools]
package-data = {"junitdiff" = ["*.md"]}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["junitdiff.tests*"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        flake8
        type

    [testenv:flake8]
        deps = flake8
        commands = python -m flake8 src

    [testenv:type]
        deps = mypy
        commands = python -m mypy src
"""

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = "junitdiff.*"
allow_untyped_defs = true
